--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,129 +1,90 @@
-*{ 
-    font-family: 'Roboto', sans-serif;
-    background-color: black;
-    color: white;
-    margin: 0;
-    padding: 0;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  #Inicio {
-    padding-left: 60px;
-  }
-  
-  .nav-bg {
-    background-color: transparent !important;
-  }
-  
-  #Content {
-    text-align: right;
-    float: inline-end;
-  }
-  
-  #avion {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    background-color: transparent !important
-  }
-  
-  .card-img-top {
-    width: 240px;
-    height: 200px;
-  }
-  
-  .card-body {
-    background-color: #0DCAF0;
-  }
-  
-  .body {
-    background-color: none;
-  }
-  
-  .gn-icon {
-    background-color: #0DCAF0;
-    padding: 10px;
-  }
-  
-  .deck1 {
-    border: none !important;
-    background-color: #000000 !important;
-  }
-  
-  
-  .bg-nav {
-    background-color: #0DCAF0;
-  }
-  
-  p {
-    color: white;
-    font-size: 35px;
-  }
-  
-  
-  
-  #pie {
-    padding-left: 100px !important;
-    padding-right: 100px !important;
-    font-size: larger;
-    font-weight: 300;
-    font-size: 40px;
-    flex-wrap: wrap!important;
-    justify-content: space-between!important;
-    align-items: center!important;
-  }
-  
-  hr {
-    background-color: #0DCAF0;
-  }
-  
-  section {
-    padding-top: 50pt;
-  }
-  
-  .popover-body {
-    background-color: #0DCAF0 !important;
-    color: #000000 !important;
-    font-size: 20px;
-  }
-  
-  .popover-content {
-    color: deepskyblue;
-    font-family: 'Playfair Display', serif !important;
-  }
-  
-  .color-tex {
-    color: black;
-  }
-  
-  .title {
-    background-color: #0DCAF0;
-    border-radius: 10px;
-    font-size: 50px;
-  }
-  
-  
-  #mensaje {
-    height: max-content;
-  }
-  
-  i {
-    background-color: #0DCAF0; justify-content: flex-end!important; flex-wrap: wrap;
-  }
-  
-  p {
-    font-weight: 300;
-    font-size: medium;
-  }
-  
-  .footer {
-    background-color: #0DCAF0;
-    padding: 5px !important;
-  }
-  .tooltip {
-    background-color: greenyellow;
-    font-size: 20px !important;
-  }
+* {
+  font-family: 'Roboto', sans-serif;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+#Inicio {
+  padding-left: 60px;
+}
+
+#Content {
+  text-align: right;
+  float: inline-end;
+}
+
+#avion {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  background-color: transparent !important
+}
+
+.card-img-top {
+  width: 240px;
+  height: 200px;
+}
+
+.bg-nav {
+  background-color: #0DCAF0;
+}
+
+p {
+  color: white;
+  font-size: 35px;
+}
+section {
+  padding-top: 50pt;
+}
+.popover-body {
+  background-color: #0DCAF0 !important;
+  color: #000000 !important;
+  font-size: 20px;
+}
+
+.popover-content {
+  color: deepskyblue;
+  font-family: 'Playfair Display', serif !important;
+}
+
+.color-text {
+  color: wheat;
+}
+
+.title {
+  background-color: #0DCAF0;
+  border-radius: 10px;
+  font-size: 50px;
+}
+/* h2{text-align: center;} */
+
+#mensaje {
+  height: max-content;
+}
+
+i {
+  background-color: #0DCAF0;
+  justify-content: flex-end !important;
+  flex-wrap: wrap;
+}
+
+p {
+  font-weight: 300;
+  font-size: medium;
+}
+
+.footer {
+  background-color: #0DCAF0;
+  padding: 5px !important;
+}
+
+.tooltip {
+  background-color: greenyellow;
+  font-size: 20px !important;
+}
